crates/module-graph/tests/snapshots/yaml_test__yaml__primitive.snap
---
source: crates/module-graph/tests/yaml_test.rs
expression: "generate_graph_for_file(sandbox.path(), \"primitive.yaml\")"
---
{
    1: Module {
        exports: [
            Export {
                kind: Native,
                module_id: None,
                source: None,
                span: None,
                symbols: [
                    ExportedSymbol {
                        kind: Default,
                        symbol_id: None,
                        name: "default",
                    },
                ],
                type_only: false,
            },
        ],
        fragment: None,
        id: 1,
        imports: [],
        package_name: None,
        path: "/root/primitive.yaml",
        query: None,
        source: YamlModule {
            data: String("abc"),
            source: "\"abc\"\n",
        },
    },
}
